--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,8 +69,16 @@ logging.level.org.springframework.security=${SECURITY_LOG_LEVEL:INFO}
 logging.level.org.hibernate.SQL=${HIBERNATE_LOG_LEVEL:INFO}
 
 # ===================================================================
-# Admin Default Account (Created on first run if not exists)
+# App Properties (Bound to AppProperties.java)
 # ===================================================================
-admin.default.email=${ADMIN_EMAIL:admin@dormex.com}
-admin.default.password=${ADMIN_PASSWORD}
-admin.default.name=${ADMIN_NAME:System Admin}
+app.jwt.secret=${JWT_SECRET}
+app.jwt.expiration=${JWT_EXPIRATION:86400000}
+app.jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION:604800000}
+
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+app.cors.allowed-methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
+app.cors.allowed-headers=*
+
+app.admin.email=${ADMIN_EMAIL:admin@dormex.com}
+app.admin.password=${ADMIN_PASSWORD}
+app.admin.name=${ADMIN_NAME:System Admin}
